# avatar-revenue-os

./: .dockerignore  .env.example  .gitignore  DEVELOPER_HANDOFF.md  LOCKED.md  REVENUE_PLAYBOOK.md  SYSTEM_ANALYSIS.md  celerybeat-schedule  create_tables.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/: config.py  deps.py  main.py  main.py.rej  middleware.py  rate_limit.py
apps/web/: .eslintrc.json  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docs/: 01-setup.md  14-scale-alerts-upgrade.md  20b-owned-audience-strategy.md  74-enterprise-workflow-builder.md  75-hyperscale-execution.md  79-offer-lab.md  OPERATIONS.md
infrastructure/caddy/: Caddyfile
infrastructure/docker/: Dockerfile.api  Dockerfile.web
scripts/: activate_live.py  audit_migrations.py  backfill_default_trend_interval.py  brand_cleanup.py  compounding_proof.py  e2e_publish_proof.py  ensure_schema.py  import_apollo_contacts.py  last_mile_proof.py  monetization_proof.py  revenue_maximizer_proof.py  rollback.sh  runtime_proof.py  seed.py  seed_packages.py  seed_phase2.py  seed_phase3.py  seed_phase4.py  seed_proofhook_packages.py  static_proof.py  sync_buffer_profiles.py  verify_production.py
tests/: conftest.py  test_account_state_intel_integration.py  test_account_state_intel_unit.py  test_affiliate_enterprise_integration.py  test_affiliate_enterprise_unit.py  test_affiliate_intel_integration.py  test_affiliate_intel_unit.py  test_avatar_followup_doctrine.py  test_brand_governance_integration.py  test_brand_governance_unit.py  test_capital_allocator_integration.py  test_capital_allocator_unit.py  test_causal_attribution_integration.py  test_causal_attribution_unit.py  test_command_center_integration.py  test_digital_twin_integration.py  test_digital_twin_unit.py  test_enterprise_security_integration.py  test_enterprise_security_unit.py  test_executive_intel_integration.py  test_executive_intel_unit.py  test_failure_family_integration.py  test_failure_family_unit.py  test_hyperscale_integration.py  test_hyperscale_unit.py  test_integrations_listening_integration.py  test_integrations_listening_unit.py  test_landing_page_campaign_integration.py  test_landing_page_campaign_unit.py  test_objection_mining_integration.py  test_objection_mining_unit.py  test_offer_lab_integration.py  test_offer_lab_unit.py  test_operator_permission_integration.py  test_operator_permission_unit.py  test_opportunity_cost_integration.py  test_opportunity_cost_unit.py  test_pattern_memory_integration.py  test_pattern_memory_unit.py  test_promote_winner_integration.py  (+13 more)
tests/e2e/: conftest.py  test_full_machine.py
tests/integration/: test_ai_buyer_trust_abuse.py  test_ai_buyer_trust_dashboard.py  test_ai_buyer_trust_flow.py  test_ai_buyer_trust_snapshot_and_proposal.py  test_ai_search_authority_flow.py  test_analytics_flow.py  test_auth_flow.py  test_autonomous_farm.py  test_autonomous_phase_a_flow.py  test_autonomous_phase_b_flow.py  test_autonomous_phase_c_flow.py  test_autonomous_phase_c_lifecycle.py  test_autonomous_phase_d_flow.py  test_avatar_flow.py  test_batch10_front_of_funnel.py  test_batch11_retention.py  test_batch12_high_ticket_close.py  test_batch13_sponsor_deals_close.py  test_batch9_fulfillment_chain.py  test_brain_phase_a_flow.py  test_brain_phase_b_flow.py  test_brain_phase_c_flow.py  test_brain_phase_d_flow.py  test_brand_flow.py  test_buffer_distribution_flow.py  test_client_activation_flow.py  test_content_form_flow.py  test_content_routing_flow.py  test_copilot_claude_flow.py  test_copilot_flow.py  test_creator_revenue_flow.py  test_discovery_flow.py  (+45 more)
workers/: base_task.py  celery_app.py
(+1686 files in other folders)
