[project]
name = "avatar-revenue-os"
version = "0.1.0"
description = "AI Avatar Revenue OS — production-grade SaaS for autonomous content monetization"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "sentry-sdk[fastapi]>=2.0",
    "httpx>=0.27",
    "aiosmtplib>=3.0",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "mypy>=1.11",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["packages/db/alembic/"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module level import not at top — needed for conditional imports
    "E701",   # multiple statements on one line (colon) — stub router pattern
    "E702",   # multiple statements on one line (semicolon) — stub router pattern
    "E741",   # ambiguous variable name
    "N806",   # variable in function should be lowercase
    "N814",   # camelcase imported as constant
    "N817",   # camelcase imported as acronym
    "N818",   # exception should be named with Error suffix
    "N802",   # function name should be lowercase
]
